add benchmarks, fix insert bug

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
-CC=cc
-CFLAGS=-W -Wall -g -I../include -DCK_DEBUG
+CC=c99
+# CFLAGS=-W -Wall -g -I../include -DCK_DEBUG
+CFLAGS=-W -Wall -g -I../include -pedantic
 LDFLAGS=
 LIBS=
 LIB=libcuckoo.so
