--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ CFLAGS=-W -Wall -O2 -I../include -pedantic
 LDFLAGS=
 LIBS=
 LIB=libcuckoo.so
-OBJS=algos.o error.o lookup3.o cfg.o hash.o
+OBJS=algos.o error.o lookup3.o cfg.o hash.o iter.o
 
 all: $(LIB)
 
